--- a/home/assets/css/home.css
+++ b/home/assets/css/home.css
@@ -1,9 +1,6 @@
 body {
   font-size: 1em;
 }
-body div {
-  border: 1px solid black;
-}
 body .container-fluid {
   width: 98%;
 }
@@ -118,6 +115,33 @@ body .right .img img {
   height: 100%;
   width: 100%;
 }
+body .right .profile {
+  position: relative;
+}
+body .right .profile .profile-ex {
+  height: 133px;
+  color: black;
+  position: absolute;
+  z-index: 1;
+  top: 18px;
+  right: 9px;
+  /* display: flex; */
+  /* flex-direction: column; */
+  width: 200px;
+  border-radius: 5px;
+  background-color: white;
+}
+body .right .profile ul {
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+  list-style: none;
+  margin-left: -15px;
+}
+body .right .profile ul i {
+  margin-right: 9px;
+  color: black;
+}
 body #logo-search {
   background-color: #F3F3F4;
   height: 100px;
@@ -148,60 +172,32 @@ body #logo-search .my-container .search i {
   right: 22px;
   top: 14px;
 }
-body #navbar {
-  padding-left: 33px;
-  background-color: #283593;
-  height: 50px;
-  color: white;
-  font-weight: 500;
-}
-body #navbar .active {
-  background-color: orangered;
-}
-body #navbar div {
-  padding: 10px 33px 0 33px;
-}
-body .profile {
-  position: relative;
-}
-body .profile .profile-ex {
-  height: 133px;
-  color: black;
-  position: absolute;
-  top: 18px;
-  right: 9px;
-  /* display: flex; */
-  /* flex-direction: column; */
-  width: 200px;
-  border-radius: 5px;
-  background-color: white;
-}
-body .profile ul {
-  display: flex;
-  flex-direction: column;
-  row-gap: 5px;
-  list-style: none;
-  margin-left: -15px;
-}
-body .profile ul i {
-  margin-right: 9px;
-  color: black;
-}
 body #nav-area {
+  position: relative;
   background-color: #283593;
+}
+body #nav-area .search {
+  position: absolute;
+  right: 40px;
+  top: 18px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  background-color: #ff5722;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 8px;
+  transition: all 0.3s;
 }
 body #nav-area .admin {
   width: 125px;
   background-color: #FF5722;
 }
-body #nav-area .my-container {
-  width: 95%;
-  height: 50px;
-  background-color: #283593;
-}
 body #nav-area nav {
-  position: absolute;
-  left: 0;
+  display: flex;
 }
 body #nav-area .navbar-list {
   display: flex;
@@ -210,6 +206,7 @@ body #nav-area .navbar-list {
 }
 body #nav-area .navbar-list li {
   list-style: none;
+  position: relative;
   margin-right: 15px;
 }
 body #nav-area .navbar-list li:hover .home {
@@ -249,10 +246,13 @@ body #nav-area .navbar-list li .categories {
   gap: 150px;
   text-align: left;
 }
+body #nav-area .navbar-list li .c {
+  top: 58px;
+  left: -150px;
+}
 body #nav-area .navbar-list li .submenu {
   overflow: hidden;
   position: absolute;
-  top: 57px;
   background-color: #fff;
   height: 0;
   line-height: 40px;
@@ -678,7 +678,7 @@ body #big-image .back-img .main-img {
   background-image: url(../images/bg-sunglass.eed54bbe.jpg);
 }
 body #big-image .back-img .main-img .info {
-  top: 30%;
+  top: 21%;
   row-gap: 30px;
   position: absolute;
   z-index: 1;
@@ -713,4 +713,258 @@ body #big-image .back-img .overlay {
   background-color: #080a18;
   opacity: 0.45;
   height: 100%;
+}
+body #subscribe .sub-area {
+  position: relative;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #283593;
+  color: white;
+}
+body #subscribe .sub-area .floating-label-group {
+  position: relative;
+  display: flex;
+  width: 23%;
+  margin-top: 15px;
+  margin-bottom: 25px;
+}
+body #subscribe .sub-area .floating-label-group .floating-label {
+  font-size: 16px;
+  color: white;
+  position: absolute;
+  pointer-events: none;
+  top: 9px;
+  left: 12px;
+  transition: all 0.1s ease;
+}
+body #subscribe .sub-area .floating-label-group input:focus ~ .floating-label,
+body #subscribe .sub-area .floating-label-group input:not(:focus):valid ~ .floating-label {
+  top: -20px;
+  bottom: 0px;
+  left: 0px;
+  font-size: 12px;
+  opacity: 1;
+  color: white;
+}
+body #subscribe .sub-area .row {
+  margin-top: 50px;
+}
+body #subscribe .sub-area .icon {
+  display: flex;
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  border-radius: 50%;
+  top: -50px;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+body #subscribe .sub-area .icon i {
+  font-size: 50px;
+  color: black;
+}
+body #logos {
+  height: 100px;
+  width: 100%;
+  background-color: whitesmoke;
+  display: flex;
+  padding: 20px 0;
+}
+body #logos .img {
+  height: 100%;
+  margin-right: 26px;
+}
+body #logos .apple, body #logos .android {
+  justify-content: center;
+  height: 100%;
+  width: 50%;
+  align-items: center;
+  display: flex;
+  border: 1pxs solid black;
+  font-size: 26px;
+  font-weight: bolder;
+  border-right: solid 1px;
+}
+body #logos .android {
+  border: none;
+}
+body #slider-product body {
+  line-height: 1.5;
+}
+body #slider-product .tabmenu-wrap {
+  padding: 100px 100px;
+}
+body #slider-product .tabmenu-wrap .tab-nav {
+  display: table;
+  width: 34%;
+}
+body #slider-product .tabmenu-wrap .tab-nav .nav {
+  display: table-cell;
+  width: 30px;
+}
+body #slider-product .tabmenu-wrap .tab-nav .nav a {
+  transition: 0.4s;
+  position: relative;
+  display: block;
+  font-size: 18px;
+  font-weight: 700;
+  color: #9b9b9b;
+  text-align: center;
+  border-bottom: 1px solid #ebe5da;
+  padding-bottom: 15px;
+  text-decoration: none;
+}
+body #slider-product .tabmenu-wrap .tab-nav .nav a:after {
+  content: "";
+  transition: 0.4s;
+  width: 0px;
+}
+body #slider-product .tabmenu-wrap .tab-nav .nav.on a {
+  color: #172349;
+}
+body #slider-product .tabmenu-wrap .tab-nav .nav.on a:after {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 100%;
+  height: 3px;
+  background-color: #172349;
+}
+body #slider-product .tabmenu-wrap .tab-con {
+  padding: 15px 10px;
+}
+body #slider-product .tabmenu-wrap .tab-con .con-box {
+  display: none;
+}
+body #slider-product .swiper {
+  width: 100%;
+  height: 100%;
+}
+body #slider-product .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body #slider-product .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+body #slider-product .product-card {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 5px;
+}
+body #slider-product .product-card:hover .cart {
+  transform: translateY(-20px);
+}
+body #slider-product .product-card .img {
+  position: relative;
+  width: 100%;
+  height: 70%;
+}
+body #slider-product .product-card .img img {
+  height: 100%;
+  width: 100%;
+}
+body #slider-product .product-card .price {
+  position: absolute;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 5px;
+  /* top: 10px; */
+  bottom: 20px;
+  left: 19px;
+  height: 26px;
+  width: 71px;
+  background-color: white;
+}
+body #slider-product .product-card .title {
+  position: relative;
+  padding-left: 15px;
+  padding-top: 5px;
+  position: relative;
+}
+body #slider-product .product-card .title h6 {
+  text-align: left;
+}
+body #slider-product .product-card .title .cart {
+  position: absolute;
+  right: 10px;
+  top: -32px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  background-color: #283593;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 8px;
+  transition: all 0.3s;
+}
+body #slider-product .product-card .title .cart:hover ~ h6 {
+  transform: translateY(-20px);
+}
+body #slider-product .product-card .title .cart i {
+  font-size: 21px;
+}
+body #slider-product .product-card .title ul {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+}
+body #slider-product .product-card .title ul i {
+  color: #edb867;
+}
+body #slider-product .product-card .icons {
+  border-top: 1px solid rgba(0, 0, 0, 0.06);
+  height: 50px;
+  /* height: 1%; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 5px; */
+  padding: 0 13px;
+  color: rgba(0, 0, 0, 0.54);
+}
+body #brands {
+  height: 300px;
+  padding: 55px 0;
+  background: whitesmoke;
+}
+body #brands h3 {
+  margin-bottom: 58px;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 600;
+}
+body #footer {
+  width: 100%;
+  height: 200px;
+  background-color: black;
+  color: white;
+  padding: 30px;
+}
+body #footer h6 {
+  margin-bottom: 20px;
+}
+body #footer ul {
+  list-style: none;
+  padding-left: 0 !important;
 }/*# sourceMappingURL=home.css.map */
