--- a/home/assets/css/home.scss
+++ b/home/assets/css/home.scss
@@ -1,6 +1,6 @@
 body {
     div {
-        border: 1px solid black;
+        // border: 1px solid;
     }
 
     font-size: 1em;
@@ -140,6 +140,38 @@ body {
                 width: 100%;
             }
         }
+
+        .profile {
+            position: relative;
+
+            .profile-ex {
+                height: 133px;
+                color: black;
+                position: absolute;
+                z-index: 1;
+                top: 18px;
+                right: 9px;
+                /* display: flex; */
+                /* flex-direction: column; */
+                width: 200px;
+                border-radius: 5px;
+                background-color: white;
+            }
+
+            ul {
+                display: flex;
+                flex-direction: column;
+                row-gap: 5px;
+                list-style: none;
+                margin-left: -15px;
+
+                i {
+                    margin-right: 9px;
+                    color: black;
+                }
+            }
+        }
+
     }
 
     #logo-search {
@@ -186,53 +218,43 @@ body {
 
     }
 
-    #navbar {
-        .active {
-            background-color: orangered;
-        }
+    // #navbar {
+    //     .active {
+    //         background-color: orangered;
+    //     }
 
-        padding-left: 33px;
-        background-color: #283593;
-        height: 50px;
-        color: white;
-        font-weight: 500;
+    //     padding-left: 33px;
+    //     background-color: #283593;
+    //     height: 50px;
+    //     color: white;
+    //     font-weight: 500;
 
-        div {
-            padding: 10px 33px 0 33px;
-        }
-    }
+    //     div {
+    //         padding: 10px 33px 0 33px;
+    //     }
+    // }
 
-    .profile {
-        position: relative;
-
-        .profile-ex {
-            height: 133px;
-            color: black;
-            position: absolute;
-            top: 18px;
-            right: 9px;
-            /* display: flex; */
-            /* flex-direction: column; */
-            width: 200px;
-            border-radius: 5px;
-            background-color: white;
-        }
-
-        ul {
-            display: flex;
-            flex-direction: column;
-            row-gap: 5px;
-            list-style: none;
-            margin-left: -15px;
-
-            i {
-                margin-right: 9px;
-                color: black;
-            }
-        }
-    }
 
     #nav-area {
+        position: relative;
+
+        .search {
+            position: absolute;
+            right: 40px;
+            top: 18px;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            display: flex;
+            background-color: #ff5722;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            border: none;
+            box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 8px;
+            transition: all 0.3s;
+        }
+
         .admin {
             width: 125px;
             background-color: #FF5722;
@@ -240,16 +262,11 @@ body {
 
         background-color: #283593;
 
-        .my-container {
-            width: 95%;
-            height: 50px;
-            background-color: #283593;
 
-        }
 
         nav {
-            position: absolute;
-            left: 0;
+            display: flex;
+
         }
 
         .navbar-list {
@@ -260,6 +277,8 @@ body {
 
             li {
                 list-style: none;
+                position: relative;
+                ;
                 margin-right: 15px;
 
                 &:hover {
@@ -312,10 +331,15 @@ body {
                     text-align: left;
                 }
 
+                .c {
+                    top: 58px;
+                    left: -150px;
+                }
+
                 .submenu {
                     overflow: hidden;
                     position: absolute;
-                    top: 57px;
+
                     background-color: #fff;
                     height: 0;
                     line-height: 40px;
@@ -323,6 +347,7 @@ body {
                     transition-delay: 0.1s;
                     border-radius: 5px;
                     z-index: 2;
+
 
                     li {
                         display: block;
@@ -369,7 +394,6 @@ body {
                         transition: all 0.3s ease-in-out;
                         transform: scale(0, 0);
                         visibility: hidden;
-
                     }
                 }
             }
@@ -755,7 +779,7 @@ body {
             font-weight: 600;
             border: none;
         }
-        
+
         .back-img {
             padding: 92px 60px;
             background-size: 2%;
@@ -766,9 +790,9 @@ body {
                 @include big-img();
                 height: 100%;
                 background-image: url(../images/bg-sunglass.eed54bbe.jpg);
-                
+
                 .info {
-                    top: 30%;
+                    top: 21%;
                     row-gap: 30px;
                     @include info();
 
@@ -776,7 +800,8 @@ body {
                         @include btn();
                     }
                 }
-                i{
+
+                i {
                     font-size: 37px;
                     font-weight: 700;
                 }
@@ -801,6 +826,334 @@ body {
                 width: 100%;
                 @include overlay();
             }
+        }
+    }
+
+    #subscribe {
+
+        .sub-area {
+            position: relative;
+            height: 300px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: #283593;
+            color: white;
+
+
+            .floating-label-group {
+                position: relative;
+                display: flex;
+                width: 23%;
+                margin-top: 15px;
+                margin-bottom: 25px;
+
+                .floating-label {
+                    font-size: 16px;
+                    color: white;
+                    position: absolute;
+                    pointer-events: none;
+                    top: 9px;
+                    left: 12px;
+                    transition: all 0.1s ease;
+                }
+
+                input:focus~.floating-label,
+                input:not(:focus):valid~.floating-label {
+                    top: -20px;
+                    bottom: 0px;
+                    left: 0px;
+                    font-size: 12px;
+                    opacity: 1;
+                    color: white;
+
+                }
+            }
+
+            .row {
+                margin-top: 50px;
+            }
+
+            .icon {
+                display: flex;
+                position: absolute;
+                height: 100px;
+                width: 100px;
+                align-items: center;
+                justify-content: center;
+                background-color: white;
+                border-radius: 50%;
+                top: -50px;
+                border: none;
+                box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+                i {
+                    font-size: 50px;
+                    color: black;
+                }
+            }
+        }
+    }
+
+    #logos {
+        height: 100px;
+        width: 100%;
+        background-color: whitesmoke;
+        display: flex;
+        padding: 20px 0;
+
+        .img {
+            height: 100%;
+            margin-right: 26px;
+
+        }
+
+        .apple {
+            justify-content: center;
+            height: 100%;
+            width: 50%;
+            align-items: center;
+            display: flex;
+            border: 1pxs solid black;
+            font-size: 26px;
+            font-weight: bolder;
+            border-right: solid 1px
+        }
+
+        .android {
+            @extend .apple;
+            border: none;
+        }
+    }
+
+
+
+
+
+    #slider-product {
+        body {
+            line-height: 1.5;
+        }
+
+        .tabmenu-wrap {
+            padding: 100px 100px;
+
+            .tab-nav {
+                display: table;
+                width: 34%;
+
+                .nav {
+                    display: table-cell;
+                    width: 30px;
+
+                    a {
+                        transition: .4s;
+                        position: relative;
+                        display: block;
+                        font-size: 18px;
+                        font-weight: 700;
+                        color: #9b9b9b;
+                        text-align: center;
+                        border-bottom: 1px solid #ebe5da;
+                        padding-bottom: 15px;
+                        text-decoration: none;
+
+                        &:after {
+                            content: "";
+                            transition: .4s;
+                            width: 0px;
+                        }
+                    }
+
+                    &.on {
+                        a {
+                            color: #172349;
+
+                            &:after {
+                                content: "";
+                                position: absolute;
+                                bottom: -2px;
+                                left: 0;
+                                right: 0;
+                                margin: 0 auto;
+                                width: 100%;
+                                height: 3px;
+                                background-color: #172349;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .tab-con {
+                padding: 15px 10px;
+
+                .con-box {
+                    display: none;
+                }
+            }
+        }
+
+        .swiper {
+            width: 100%;
+            height: 100%;
+        }
+
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            background: #fff;
+
+            /* Center slide text vertically */
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            -webkit-justify-content: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            align-items: center;
+        }
+
+        .swiper-slide img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .product-card {
+            // width: 80%;
+            border: 1px solid rgb(0, 0, 0, 0.2);
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            border-radius: 5px;
+
+            &:hover .cart {
+                transform: translateY(-20px);
+            }
+
+
+            .img {
+                position: relative;
+                width: 100%;
+                height: 70%;
+
+                img {
+                    height: 100%;
+                    width: 100%;
+                }
+            }
+
+            .price {
+                position: absolute;
+                box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
+                border-radius: 5px;
+                /* top: 10px; */
+                bottom: 20px;
+                left: 19px;
+                height: 26px;
+                width: 71px;
+                background-color: white;
+            }
+
+
+            .title {
+                position: relative;
+                padding-left: 15px;
+                padding-top: 5px;
+
+                h6 {
+                    text-align: left;
+                }
+
+                .cart {
+                    position: absolute;
+                    right: 10px;
+                    top: -32px;
+                    width: 60px;
+                    height: 60px;
+                    border-radius: 50%;
+                    display: flex;
+                    background-color: #283593;
+                    justify-content: center;
+                    align-items: center;
+                    color: white;
+                    border: none;
+                    box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 8px;
+                    transition: all 0.3s;
+
+                    &:hover~h6 {
+                        transform: translateY(-20px);
+
+                    }
+
+                    i {
+                        font-size: 21px;
+
+                    }
+                }
+
+                position: relative;
+
+                ul {
+                    display: flex;
+                    list-style: none;
+                    padding-left: 0;
+
+                    i {
+                        color: #edb867
+                    }
+                }
+            }
+
+            .icons {
+                border-top: 1px solid rgb(0 0 0 / 6%);
+                height: 50px;
+                /* height: 1%; */
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                /* padding: 5px; */
+                padding: 0 13px;
+                color: rgba(0, 0, 0, 0.54);
+
+            }
+        }
+    }
+
+    #brands {
+
+        height: 300px;
+        padding: 55px 0;
+        background: whitesmoke;
+
+        h3 {
+            margin-bottom: 58px;
+            text-align: center;
+            font-size: 36px;
+            font-weight: 600;
+        }
+    }
+
+    #footer {
+        width: 100%;
+        height: 200px;
+        background-color: black;
+        color: white;
+        padding: 30px;
+
+        h6 {
+            margin-bottom: 20px;
+        }
+
+        ul {
+            list-style: none;
+            padding-left: 0 !important;
         }
     }
 }
