--- a/assets/css/home/home.css
+++ b/assets/css/home/home.css
@@ -167,7 +167,6 @@ body #nav-area .search {
   color: white;
   border: none;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 8px;
-  transition: all 0.3s;
 }
 body #nav-area .admin {
   width: 125px;
@@ -175,6 +174,20 @@ body #nav-area .admin {
 }
 body #nav-area nav {
   display: flex;
+  transition: top 0.5s;
+}
+body #nav-area .fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  color: black;
+  -webkit-animation-name: example;
+          animation-name: example;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  background-color: #283593;
+  width: 100%;
 }
 body #nav-area .navbar-list {
   display: flex;
