--- a/assets/css/about/about.scss
+++ b/assets/css/about/about.scss
@@ -11,179 +11,164 @@ li {
     width: 97%;
 }
 
-#head {
+#top-area {
+    background-color: #333F99;
     height: 100px;
-    min-width: 100%;
 
-    background-color: #285593;
-    color: white;
-    display: flex;
-    padding: 0 33px;
-    justify-content: space-between;
-    align-items: center;
-
-    .left {
-        display: flex;
-        height: 100%;
-
-        div {
-            margin-right: 10px;
-            border-right: 0.5px solid white;
-            display: flex;
-            align-items: center;
-            border: none;
-
-            .icon {
-                color: #fff;
-                margin-left: 20px;
-
-                border: none;
-            }
-        }
-
-        // .welcome {}
+    .my-container {
+        width: 95%;
+        margin: auto;
+        background-color: #333F99;
 
         .language {
-            position: relative;
 
-            .language-ex {
-                position: absolute;
-                display: flex;
-                flex-direction: column;
-                list-style: none;
-                left: 18px;
-                top: 22px;
-                color: black;
-                padding: 4px;
-                width: 114px;
-                background-color: white;
+            margin-left: 10px;
+
+            .button1 {
+                background-color: #333F99;
+                border: none;
+                margin-top: 30px;
             }
         }
 
-        .currency {
-            position: relative;
+        .country {
 
-            .currency-ex {
-                position: absolute;
-                top: 10px;
-                left: 10px;
-                width: 200px;
-                background-color: white;
-                color: black;
-                list-style: none;
-                display: flex;
-                flex-direction: column;
-                align-items: start;
-                padding: 3px;
-                row-gap: 12px;
+            margin-left: 10px;
+
+            .button2 {
+                background-color: #333F99;
+                border: none;
+                margin-top: 30px;
             }
 
-            li {
-                display: flex;
-                align-items: center;
+            span {
+                padding-left: 12px;
+            }
 
+            img {
+                width: 22px;
+                height: 22px;
+                border-radius: 50%;
+            }
+        }
 
-                div {
-                    height: 30px;
-                    width: 30px;
+        .top-area-logo {
+            align-items: center;
+            margin-top: 28px;
+            margin-left: 60px;
+        }
+
+        .icons {
+            display: flex;
+            float: right;
+
+            .basket {
+
+                margin-right: 12px;
+                position: relative;
+
+                .basket-circles {
+                    width: 23px;
+                    height: 23px;
+                    background-color: #FF5722;
                     border-radius: 50%;
-                    overflow: hidden;
+                    position: absolute;
+                    top: 18px;
+                    left: 32px;
+                    padding-top: 10px;
+                    cursor: pointer;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
 
-                    img {
-                        height: 100%;
-                        width: 100%;
+                    sup {
+
+                        color: white;
+                    }
+                }
+
+                .basket-bg {
+                    width: 44px;
+                    height: 44px;
+                    border-radius: 50%;
+                    background-color: #FF5722;
+                    margin-top: 28px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    i {
+                        color: white;
+                        font-size: 18px;
+                        cursor: pointer;
+                    }
+                }
+
+            }
+
+            .heart {
+
+                height: 45px;
+                margin-right: 20px;
+
+
+                .heart-circles {
+                    width: 23px;
+                    height: 23px;
+                    background-color: #FF5722;
+                    border-radius: 50%;
+                    position: absolute;
+                    top: 19px;
+                    right: 87px;
+                    cursor: pointer;
+                    padding-top: 10px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    sup {
+
+                        color: white;
+                    }
+                }
+
+                .favori-bg {
+                    width: 44px;
+                    height: 44px;
+                    border-radius: 50%;
+                    background-color: #FF5722;
+                    margin-top: 28px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    i {
+                        color: white;
+                        font-size: 18px;
+                        cursor: pointer;
+
                     }
 
                 }
 
-                span {
-                    margin-left: 10px;
-                }
-            }
-        }
-    }
-
-    .right {
-        display: flex;
-        height: 100%;
-        align-items: center;
-        float: right;
-
-        div {
-            position: relative;
-            margin-left: 10px;
-            display: flex;
-            align-items: center;
-            height: inherit;
-
-            border: none;
-            background: orangered;
-            border-radius: 50%;
-            height: 40px;
-            justify-content: center;
-            width: 40px;
-
-            sub {
-                position: absolute;
-                top: -9px;
-                right: -7px;
-                height: 23px;
-                width: 20px;
-                background: orangered;
-                border-radius: 50%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-        }
-
-        .img {
-            padding: 0;
-            margin-left: 0;
-            height: 100%;
-            width: 100%;
-            border-radius: 50%;
-            overflow: hidden;
-
-            img {
-                height: 100%;
-                width: 100%;
-            }
-        }
-
-        .profile {
-            position: relative;
-
-            .profile-ex {
-                height: 133px;
-                color: black;
-                position: absolute;
-                z-index: 1;
-                top: 18px;
-                right: 9px;
-                /* display: flex; */
-                /* flex-direction: column; */
-                width: 200px;
-                border-radius: 5px;
-                background-color: white;
             }
 
-            ul {
-                display: flex;
-                flex-direction: column;
-                row-gap: 5px;
-                list-style: none;
-                margin-left: -99px;
+            .profile-img {
+                width: 40px;
 
-                i {
-                    margin-right: 9px;
-                    color: black;
+                img {
+
+                    border-radius: 50%;
+                    width: 100%;
+                    margin-top: 30px;
                 }
             }
         }
 
     }
+
 }
+
 
 #cover {
     .back-img {
@@ -208,6 +193,7 @@ li {
 
 #nav-area {
     position: relative;
+
 
     .search {
         position: absolute;
@@ -238,6 +224,66 @@ li {
     nav {
         display: flex;
         justify-content: center;
+        height: 50px;
+
+        .bar {
+            display: none;
+            font-size: 30px;
+            color: white;
+            position: absolute;
+            left: 21px;
+        }
+
+        .sidebar {
+            background-color: red;
+            width: 300px;
+            position: fixed;
+            z-index: 999;
+            left: 0px;
+            top: 0;
+            padding: 50px 0;
+            transition: all 0.2s;
+            height: 123vh;
+            background-size: 100%;
+            background-image: url(../../images/about/navbar.jpg);
+
+            // display: none;
+            ul {
+                width: 330px;
+                display: flex;
+                flex-direction: column;
+                list-style: none;
+                row-gap: 20px;
+                font-size: 20px;
+
+                li {
+                    a {
+                        color: white;
+                    }
+                }
+            }
+        }
+
+        .active {
+            background-color: yellow;
+            left: -300px;
+        }
+    }
+
+    @media (max-width:992px) {
+        nav .sidebar {
+            background-color: yellow;
+            z-index: 999;
+
+        }
+
+        nav .navbar-list {
+            display: none;
+        }
+
+        .bar {
+            display: block !important;
+        }
     }
 
     .navbar-list {
@@ -376,6 +422,7 @@ li {
 #vision {
     padding: 80px;
     background-color: whitesmoke;
+
     h1 {
         font-size: 3.1em;
         line-height: 1.1em;
@@ -468,6 +515,7 @@ li {
         background-color: transparent;
         color: white;
 
+
         img {
             width: 38%;
             border-radius: 50%;
@@ -478,7 +526,7 @@ li {
         .card-title {
             font-weight: 700;
             font-size: 1.5em;
-            
+
         }
 
         .btn {
@@ -500,7 +548,9 @@ li {
 #cards {
     padding: 80px;
     background: whitesmoke;
+
     .card {
+        position: relative;
         border: none;
         box-shadow: none;
         margin-top: 2em;
@@ -509,6 +559,7 @@ li {
         text-align: center;
         box-shadow: none;
         background-color: transparent;
+
 
         img {
             width: 200px;
@@ -537,17 +588,18 @@ li {
     }
 }
 
-#register{
-    .img{
-        img{
+#register {
+    .img {
+        img {
             width: 100%;
             height: 100%;
             background-image: url(../images/aboutqiz.jpg);
         }
-        
+
     }
+
     .register-area {
-        
+
         height: 600px;
 
         background-color: white;
@@ -555,15 +607,16 @@ li {
 
 
         .image {
-           height: 100%;
+            height: 100%;
             background-size: 100%;
-            img{
+
+            img {
                 height: 100%;
             }
         }
 
         .register {
-          
+
             background: white;
             width: 61%;
             margin-left: 50px;
