--- a/assets/css/accessories/accessories.css
+++ b/assets/css/accessories/accessories.css
@@ -11,150 +11,127 @@ li {
   width: 97%;
 }
 
-#head {
+#top-area {
+  background-color: #333F99;
   height: 100px;
-  min-width: 100%;
-  background-color: #285593;
-  color: white;
-  display: flex;
-  padding: 0 33px;
-  justify-content: space-between;
-  align-items: center;
 }
-#head .left {
-  display: flex;
-  height: 100%;
+#top-area .my-container {
+  width: 95%;
+  margin: auto;
+  background-color: #333F99;
 }
-#head .left div {
-  margin-right: 10px;
-  border-right: 0.5px solid white;
-  display: flex;
-  align-items: center;
-  border: none;
-}
-#head .left div .icon {
-  color: #fff;
-  margin-left: 20px;
-  border: none;
-}
-#head .left .language {
-  position: relative;
-}
-#head .left .language .language-ex {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  list-style: none;
-  left: 18px;
-  top: 22px;
-  color: black;
-  padding: 4px;
-  width: 114px;
-  background-color: white;
-}
-#head .left .currency {
-  position: relative;
-}
-#head .left .currency .currency-ex {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  width: 200px;
-  background-color: white;
-  color: black;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  padding: 3px;
-  row-gap: 12px;
-}
-#head .left .currency li {
-  display: flex;
-  align-items: center;
-}
-#head .left .currency li div {
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
-  overflow: hidden;
-}
-#head .left .currency li div img {
-  height: 100%;
-  width: 100%;
-}
-#head .left .currency li span {
+#top-area .my-container .language {
   margin-left: 10px;
 }
-#head .right {
-  display: flex;
-  height: 100%;
+#top-area .my-container .language .button1 {
+  background-color: #333F99;
+  border: none;
+  margin-top: 30px;
+}
+#top-area .my-container .country {
+  margin-left: 10px;
+}
+#top-area .my-container .country .button2 {
+  background-color: #333F99;
+  border: none;
+  margin-top: 30px;
+}
+#top-area .my-container .country span {
+  padding-left: 12px;
+}
+#top-area .my-container .country img {
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+}
+#top-area .my-container .top-area-logo {
   align-items: center;
+  margin-top: 28px;
+  margin-left: 60px;
+}
+#top-area .my-container .icons {
+  display: flex;
   float: right;
 }
-#head .right div {
+#top-area .my-container .icons .basket {
+  margin-right: 12px;
   position: relative;
-  margin-left: 10px;
-  display: flex;
-  align-items: center;
-  height: inherit;
-  border: none;
-  background: orangered;
+}
+#top-area .my-container .icons .basket .basket-circles {
+  width: 23px;
+  height: 23px;
+  background-color: #FF5722;
   border-radius: 50%;
-  height: 40px;
+  position: absolute;
+  top: 18px;
+  left: 32px;
+  padding-top: 10px;
+  cursor: pointer;
+  display: flex;
   justify-content: center;
+  align-items: center;
+}
+#top-area .my-container .icons .basket .basket-circles sup {
+  color: white;
+}
+#top-area .my-container .icons .basket .basket-bg {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #FF5722;
+  margin-top: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#top-area .my-container .icons .basket .basket-bg i {
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+}
+#top-area .my-container .icons .heart {
+  height: 45px;
+  margin-right: 20px;
+}
+#top-area .my-container .icons .heart .heart-circles {
+  width: 23px;
+  height: 23px;
+  background-color: #FF5722;
+  border-radius: 50%;
+  position: absolute;
+  top: 19px;
+  right: 87px;
+  cursor: pointer;
+  padding-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#top-area .my-container .icons .heart .heart-circles sup {
+  color: white;
+}
+#top-area .my-container .icons .heart .favori-bg {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #FF5722;
+  margin-top: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#top-area .my-container .icons .heart .favori-bg i {
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+}
+#top-area .my-container .icons .profile-img {
   width: 40px;
 }
-#head .right div sub {
-  position: absolute;
-  top: -9px;
-  right: -7px;
-  height: 23px;
-  width: 20px;
-  background: orangered;
+#top-area .my-container .icons .profile-img img {
   border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#head .right .img {
-  padding: 0;
-  margin-left: 0;
-  height: 100%;
   width: 100%;
-  border-radius: 50%;
-  overflow: hidden;
-}
-#head .right .img img {
-  height: 100%;
-  width: 100%;
-}
-#head .right .profile {
-  position: relative;
-}
-#head .right .profile .profile-ex {
-  height: 133px;
-  color: black;
-  position: absolute;
-  z-index: 1;
-  top: 18px;
-  right: 9px;
-  /* display: flex; */
-  /* flex-direction: column; */
-  width: 200px;
-  border-radius: 5px;
-  background-color: white;
-}
-#head .right .profile ul {
-  display: flex;
-  flex-direction: column;
-  row-gap: 5px;
-  list-style: none;
-  margin-left: -99px;
-}
-#head .right .profile ul i {
-  margin-right: 9px;
-  color: black;
+  margin-top: 30px;
 }
 
 #nav-area {
