--- a/assets/css/product/product.css
+++ b/assets/css/product/product.css
@@ -6,6 +6,129 @@ button {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+#top-area {
+  background-color: #333F99;
+  height: 100px;
+}
+#top-area .my-container {
+  width: 95%;
+  margin: auto;
+  background-color: #333F99;
+}
+#top-area .my-container .language {
+  margin-left: 10px;
+}
+#top-area .my-container .language .button1 {
+  background-color: #333F99;
+  border: none;
+  margin-top: 30px;
+}
+#top-area .my-container .country {
+  margin-left: 10px;
+}
+#top-area .my-container .country .button2 {
+  background-color: #333F99;
+  border: none;
+  margin-top: 30px;
+}
+#top-area .my-container .country span {
+  padding-left: 12px;
+}
+#top-area .my-container .country img {
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+}
+#top-area .my-container .top-area-logo {
+  align-items: center;
+  margin-top: 28px;
+  margin-left: 60px;
+}
+#top-area .my-container .icons {
+  display: flex;
+  float: right;
+}
+#top-area .my-container .icons .basket {
+  margin-right: 12px;
+  position: relative;
+}
+#top-area .my-container .icons .basket .basket-circles {
+  width: 23px;
+  height: 23px;
+  background-color: #FF5722;
+  border-radius: 50%;
+  position: absolute;
+  top: 18px;
+  left: 32px;
+  padding-top: 10px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#top-area .my-container .icons .basket .basket-circles sup {
+  color: white;
+}
+#top-area .my-container .icons .basket .basket-bg {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #FF5722;
+  margin-top: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#top-area .my-container .icons .basket .basket-bg i {
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+}
+#top-area .my-container .icons .heart {
+  height: 45px;
+  margin-right: 20px;
+}
+#top-area .my-container .icons .heart .heart-circles {
+  width: 23px;
+  height: 23px;
+  background-color: #FF5722;
+  border-radius: 50%;
+  position: absolute;
+  top: 19px;
+  right: 87px;
+  cursor: pointer;
+  padding-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#top-area .my-container .icons .heart .heart-circles sup {
+  color: white;
+}
+#top-area .my-container .icons .heart .favori-bg {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #FF5722;
+  margin-top: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#top-area .my-container .icons .heart .favori-bg i {
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+}
+#top-area .my-container .icons .profile-img {
+  width: 40px;
+}
+#top-area .my-container .icons .profile-img img {
+  border-radius: 50%;
+  width: 100%;
+  margin-top: 30px;
+}
+
 #cover .back-img {
   background-size: cover;
   width: 100%;
