--- a/assets/css/profile/profile.scss
+++ b/assets/css/profile/profile.scss
@@ -11,180 +11,166 @@ li {
     width: 97%;
 }
 
-#head {
+#top-area {
+    background-color: #333F99;
     height: 100px;
-    min-width: 100%;
-
-    background-color: #285593;
-    color: white;
-    display: flex;
-    padding: 0 33px;
-    justify-content: space-between;
-    align-items: center;
-
-    .left {
-        display: flex;
-        height: 100%;
-
-        div {
-            margin-right: 10px;
-            border-right: 0.5px solid white;
-            display: flex;
-            align-items: center;
-            border: none;
-
-            .icon {
-                color: #fff;
-                margin-left: 20px;
-
-                border: none;
-            }
+  
+    .my-container {
+      width: 95%;
+      margin: auto;
+      background-color: #333F99;
+  
+      .language {
+  
+        margin-left: 10px;
+  
+        .button1 {
+          background-color: #333F99;
+          border: none;
+          margin-top: 30px;
         }
-
-        // .welcome {}
-
-        .language {
-            position: relative;
-
-            .language-ex {
-                position: absolute;
-                display: flex;
-                flex-direction: column;
-                list-style: none;
-                left: 18px;
-                top: 22px;
-                color: black;
-                padding: 4px;
-                width: 114px;
-                background-color: white;
-            }
+      }
+  
+      .country {
+  
+        margin-left: 10px;
+  
+        .button2 {
+          background-color: #333F99;
+          border: none;
+          margin-top: 30px;
         }
-
-        .currency {
-            position: relative;
-
-            .currency-ex {
-                position: absolute;
-                top: 10px;
-                left: 10px;
-                width: 200px;
-                background-color: white;
-                color: black;
-                list-style: none;
-                display: flex;
-                flex-direction: column;
-                align-items: start;
-                padding: 3px;
-                row-gap: 12px;
-            }
-
-            li {
-                display: flex;
-                align-items: center;
-
-
-                div {
-                    height: 30px;
-                    width: 30px;
-                    border-radius: 50%;
-                    overflow: hidden;
-
-                    img {
-                        height: 100%;
-                        width: 100%;
-                    }
-
-                }
-
-                span {
-                    margin-left: 10px;
-                }
-            }
+  
+        span {
+          padding-left: 12px;
         }
-    }
-
-    .right {
-        display: flex;
-        height: 100%;
+  
+        img {
+          width: 22px;
+          height: 22px;
+          border-radius: 50%;
+        }
+      }
+  
+      .top-area-logo {
         align-items: center;
+        margin-top: 28px;
+        margin-left: 60px;
+      }
+  
+      .icons {
+        display: flex;
         float: right;
-
-        div {
-            position: relative;
-            margin-left: 10px;
+  
+        .basket {
+  
+          margin-right: 12px;
+          position: relative;
+  
+          .basket-circles {
+            width: 23px;
+            height: 23px;
+            background-color: #FF5722;
+            border-radius: 50%;
+            position: absolute;
+            top: 18px;
+            left: 32px;
+            padding-top: 10px;
+            cursor: pointer;
             display: flex;
-            align-items: center;
-            height: inherit;
-
-            border: none;
-            background: orangered;
-            border-radius: 50%;
-            height: 40px;
             justify-content: center;
-            width: 40px;
-
-            sub {
-                position: absolute;
-                top: -9px;
-                right: -7px;
-                height: 23px;
-                width: 20px;
-                background: orangered;
-                border-radius: 50%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+            align-items: center;
+  
+            sup {
+  
+              color: white;
             }
-        }
-
-        .img {
-            padding: 0;
-            margin-left: 0;
-            height: 100%;
-            width: 100%;
+          }
+  
+          .basket-bg {
+            width: 44px;
+            height: 44px;
             border-radius: 50%;
-            overflow: hidden;
-
-            img {
-                height: 100%;
-                width: 100%;
+            background-color: #FF5722;
+            margin-top: 28px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+  
+            i {
+              color: white;
+              font-size: 18px;
+              cursor: pointer;
             }
+          }
+  
         }
-
-        .profile {
-            position: relative;
-
-            .profile-ex {
-                height: 133px;
-                color: black;
-                position: absolute;
-                z-index: 1;
-                top: 18px;
-                right: 9px;
-                /* display: flex; */
-                /* flex-direction: column; */
-                width: 200px;
-                border-radius: 5px;
-                background-color: white;
+  
+        .heart {
+  
+          height: 45px;
+          margin-right: 20px;
+  
+  
+          .heart-circles {
+            width: 23px;
+            height: 23px;
+            background-color: #FF5722;
+            border-radius: 50%;
+            position: absolute;
+            top: 19px;
+            right: 87px;
+            cursor: pointer;
+            padding-top: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+  
+            sup {
+  
+              color: white;
             }
-
-            ul {
-                display: flex;
-                flex-direction: column;
-                row-gap: 5px;
-                list-style: none;
-                margin-left: -99px;
-
-                i {
-                    margin-right: 9px;
-                    color: black;
-                }
+          }
+  
+          .favori-bg {
+            width: 44px;
+            height: 44px;
+            border-radius: 50%;
+            background-color: #FF5722;
+            margin-top: 28px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+  
+            i {
+              color: white;
+              font-size: 18px;
+              cursor: pointer;
+  
             }
+  
+          }
+  
+  
+  
+  
         }
-
+  
+        .profile-img {
+          width: 40px;
+  
+          img {
+  
+            border-radius: 50%;
+            width: 100%;
+            margin-top: 30px;
+          }
+        }
+      }
+  
     }
-}
-
+  
+  }
 #cover {
     .back-img {
         background-size: cover;
